--- a/footer.html
+++ b/footer.html
@@ -9,9 +9,9 @@
 <body>
     <footer id="footer">
         <div class="footer-container">
-            <div class="footer-button"><div class="footer-icon"><i class="fas fa-user-friends"></i></div><p>Get Connected</p></div>
-            <div class="footer-button"><div class="footer-icon"><i class="fas fa-leaf"></i></div><p>Sustainability</p></div>
-            <div class="footer-button"><div class="footer-icon"><i class="fas fa-shield-alt"></i></div><p>Security</p></div>
+            <div class="footer-button"><div class="button-icon"><i class="fas fa-user-friends"></i></div><p>Get Connected</p></div>
+            <div class="footer-button"><div class="button-icon"><i class="fas fa-leaf"></i></div><p>Sustainability</p></div>
+            <div class="footer-button"><div class="button-icon"><i class="fas fa-shield-alt"></i></div><p>Security</p></div>
         </div>
     </footer>
 </body>
