Addes buttons and bakground

--- a/Startpage.html
+++ b/Startpage.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<div class="wrapper">
+		<img src="images/smartneigh.png">
 		<div class="buttons">
 			<button class="connect">Get connected</button>
 			<button class="sustainability">Sustainability</button>
