--- a/connect.html
+++ b/connect.html
@@ -1,4 +1,6 @@
-<html><head>
+<!DOCTYPE html>
+<html>
+    <head>
 	<title>My Website</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
