adding sidebar template

--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>My Website</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-	<div class="wrapper">
-		<img src="images/smartneigh.png">
-		<div class="buttons">
-			<button class="connect">Get connected</button>
-			<button class="sustainability">Sustainability</button>
-			<button class="emergency">Emergency</button>
-		</div>
 
-	</div>
+<head>
+    <title>Landing Page</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="loading.js" defer></script>
+</head>
+
+<body>
+    <div class="index-page-container">
+        <img class="startpage-img hidden" src="images/smartneigh.png">
+    </div>
 </body>
+
 </html>
