--- a/local-news.html.html
+++ b/local-news.html.html
@@ -9,7 +9,7 @@
 <body>
     <h1 class="headline">Local News</h1>
     <div class="page-container">
-        
+        <div class="news-container"></div>
     </div>
 </body>
 </html>
