--- a/connect.html
+++ b/connect.html
@@ -5,6 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <header>
+        <img src="images/smartneigh.png" style="width: 350px; height: 150px;" alt="logo">
+    </header>
     <div class="connect-wrapper">
 	<div class="connect-container">
         <div class="events"><div class="button-icon"><i class="far fa-calendar-alt"></i></div><p class="parstyle">Events</p></div>
@@ -15,4 +18,11 @@
 </div>
     <script src="https://kit.fontawesome.com/14a6d0f73b.js" crossorigin="anonymous"></script>
 </body>
+<footer id="footer">
+    <div class="footer-container">
+        <div class="footer-button"><div class="button-icon"><i class="fas fa-user-friends"></i></div><p>Get Connected</p></div>
+        <div class="footer-button"><div class="button-icon"><i class="fas fa-leaf"></i></div><p>Sustainability</p></div>
+        <div class="footer-button"><div class="button-icon"><i class="fas fa-shield-alt"></i></div><p>Security</p></div>
+    </div>
+</footer>
 </html>
