--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<div class="wrapper">
 		<img src="images/smartneigh.png">
 		<div class="buttons">
-			<button class="connect"><div class="button-icon"><i class="fas fa-user-friends"></i></div><p>Get Connected</p></button>
+			<button class="connect"><div class="button-icon"><i class="fas fa-user-friends"></i></div><p>Get Connected</p></button>-
 			<button class="sustainability"><div class="button-icon"><i class="fas fa-leaf"></i></div><p>Sustainability</p></button>
 			<button class="emergency"><div class="button-icon"><i class="fas fa-shield-alt"></i></div><p>Security</p></button>
 		</div>
