--- a/security.html
+++ b/security.html
@@ -5,7 +5,11 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <header>
+        <img src="images/smartneigh.png" style="width: 350px; height: 150px;" alt="logo">
+    </header>
     <div class="security-wrapper">
+        
 	<div class="security-container">
         <div class="neigbourhoodwatch"><div class="button-icon"><i class="fas fa-user-secret"></i></div><p class="parstyle">Neigbourhood watch</p></div>
         <div class="incidents"><div class="button-icon"><i class="fas fa-bullhorn"></i></div><p class="parstyle">Incidents</p></div>
@@ -13,4 +17,11 @@
 </div>
     <script src="https://kit.fontawesome.com/14a6d0f73b.js" crossorigin="anonymous"></script>
 </body>
+<footer id="footer">
+    <div class="footer-container">
+        <div class="footer-button"><div class="button-icon"><i class="fas fa-user-friends"></i></div><p>Get Connected</p></div>
+        <div class="footer-button"><div class="button-icon"><i class="fas fa-leaf"></i></div><p>Sustainability</p></div>
+        <div class="footer-button"><div class="button-icon"><i class="fas fa-shield-alt"></i></div><p>Security</p></div>
+    </div>
+</footer>
 </html>
