fixed all buttons and some ahref

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 	<div class="wrapper">
-		<img src="images/smartneigh.png">
+		<img class="image-logo" src="images/smartneigh.png">
 		<div class="buttons">
-			<button class="connect"><div class="button-icon"><i class="fas fa-user-friends"></i></div><p>Get Connected</p></button>
-			<button class="sustainability"><div class="button-icon"><i class="fas fa-leaf"></i></div><p>Sustainability</p></button>
-			<button class="emergency"><div class="button-icon"><i class="fas fa-shield-alt"></i></div><p>Security</p></button>
+			<a href="connect.html"><button class="connect"><div class="button-icon"><i class="fas fa-user-friends"></i></div><p>Get Connected</p></button></a>
+			<a href="sustainability.html"><button class="sustainability"><div class="button-icon"><i class="fas fa-leaf"></i></div><p>Sustainability</p></button></a>
+			<a href="security.html"><button class="emergency"><div class="button-icon"><i class="fas fa-shield-alt"></i></div><p>Security</p></button></a>
 		</div>
 
 	</div>
