--- a/security.html
+++ b/security.html
@@ -2,13 +2,18 @@
 <html>
     <head>
 	<title>My Website</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lobster">
 </head>
 <body>
+    <div class="logo-header">
+        <h1>Security</h1>
+    </div>
     <div class="security-wrapper">
 	<div class="security-container">
         <div class="neigbourhoodwatch"><div class="button-icon"><i class="fas fa-user-secret"></i></div><p class="parstyle">Neigbourhood watch</p></div>
         <div class="incidents"><div class="button-icon"><i class="fas fa-bullhorn"></i></div><p class="parstyle">Incidents</p></div>
+        <div class="weather-alerts"><div class="button-icon"><i class="fas fa-cloud"></i></div><p class="parstyle">Weather alerts</p></div>
     </div>
 </div>
     <script src="https://kit.fontawesome.com/14a6d0f73b.js" crossorigin="anonymous"></script>
