added styles + pm.html

--- a/pm.html
+++ b/pm.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="wrapper">
-        <img src="images/smartneigh.png">
+        <img src="images/smartneigh.png" class="image-logo">
         <div class="inner-wrap">
             <div class="chat-nav">
                 <p class="pers-chat">Jimmy T</p>
