--- a/Reuse.html
+++ b/Reuse.html
@@ -45,6 +45,7 @@ $('a.less', minimized_elements).click(function(event){
 	<div class="container-box">
         <div class="logo-header">
             <h1>Reuse</h1>
+            <p class="information-header">In reuse we encourage you to offer your unwanted items to your neighbours</p>
         </div>
 		<div class="container-items">
             <div class="image-container">
