--- a/carpool.html
+++ b/carpool.html
@@ -8,40 +8,6 @@
     <script src="https://kit.fontawesome.com/14a6d0f73b.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="sidebar.js" defer></script>
-    <script>
-        jQuery(function () {
-            console.log("Inside the main function");
-
-            var minimized_elements = $('p.minimize');
-            console.log("The minized text is ", minimized_elements);
-            var minimize_character_count = 50;
-
-            minimized_elements.each(function () {
-                console.log("Inside the minimize function");
-                var t = $(this).text();
-                if (t.length < minimize_character_count) return;
-
-                $(this).html(
-                    t.slice(0, minimize_character_count) + '<span>... </span><a href="#" class="more">More</a>' +
-                    '<span style="display:none;">' + t.slice(minimize_character_count, t.length) + ' <a href="#" class="less">Less</a></span>'
-                );
-
-            });
-
-            $('a.more', minimized_elements).click(function (event) {
-                event.preventDefault();
-                $(this).hide().prev().hide();
-                $(this).next().show();
-            });
-
-            $('a.less', minimized_elements).click(function (event) {
-                event.preventDefault();
-                $(this).parent().hide().prev().show().prev().show();
-            });
-
-        })
-
-    </script>
 </head>
 
 <body>
@@ -63,19 +29,18 @@
             <div class="logo-header">
                 <button class="openbtn" onclick="navEvent()">&#9776;</button>
                 <h1 class="page-header">Carpool</h1>
-            <p class="information-header">In Carpool we encourage you to reduce your carbon footprint by travelling
+            <p class="information-header">Less Fuel. Less Pollution. Less Stress. Reduce your carbon footprint by travelling
                 together</p>
             </div>  
         </div>
         <div class="container-items">
             <div class="image-container">
-                <img src="images/lamp.jpg" alt="lamp">
-                <p class="minimize">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed dot eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.
-                    Reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint occaecat cupidatat non proident, sunt inre culpa qui
-                    officia deserunt mollit anim id est laborum.
+                <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d17822.970945054585!2d12.692099767058092!3d56.055528360650555!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x4652323588beb127%3A0x6999d90413d68502!2sCentrum%2C%20Helsingborg!3m2!1d56.0458457!2d12.696375699999999!4m5!1s0x46523268f91a5a81%3A0xebf6b9714c9daf4c!2sMaxi%20ICA%20Stormarknad%20Helsingborg%2C%20Regementsv%C3%A4gen%207%2C%20254%2057%20Helsingborg!3m2!1d56.065387699999995!2d12.7196693!5e0!3m2!1sen!2sse!4v1604433709648!5m2!1sen!2sse" width="400" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <p class="minimize">
+                    <span class="carpool-header">To:</span><span class="carpool-text">ICA Maxi Helsingborg</span><br>
+                    <span class="carpool-header">From:</span><span class="carpool-text">Helsingborg Centrum</span><br>
+                    <span class="carpool-header">Time:</span><span class="carpool-text">18:00</span><br>
+                    <span class="carpool-header">Date:</span><span class="carpool-text">05/11/2020</span><br>
                 </p>
             </div>
             <div class="product-text"><b>Are you interested?</b>
@@ -87,13 +52,12 @@
 
         <div class="container-items">
             <div class="image-container">
-                <img src="images/chair.jpg" alt="chair">
-                <p class="minimize">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed dot eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.
-                    Reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint occaecat cupidatat non proident, sunt inre culpa qui
-                    officia deserunt mollit anim id est laborum.
+                <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d142546.46664254466!2d12.68122310824766!3d56.06561683533444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x46523247515cf0cb%3A0xe2cca4749a57fd82!2sStattena%2C%20Helsingborg!3m2!1d56.0581138!2d12.7034191!4m5!1s0x4653d36f7d0791e7%3A0x5f95756cea43b217!2sHello%20Fresh%20Ab%2C%20Billesholmsv%C3%A4gen%2C%20Bjuv!3m2!1d56.0749146!2d12.941824599999999!5e0!3m2!1sen!2sse!4v1604433784163!5m2!1sen!2sse" width="400" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <p class="minimize">
+                    <span class="carpool-header">To:</span><span class="carpool-text">ICA Maxi Helsingborg</span><br>
+                    <span class="carpool-header">From:</span><span class="carpool-text">Helsingborg Centrum</span><br>
+                    <span class="carpool-header">Time:</span><span class="carpool-text">18:00</span><br>
+                    <span class="carpool-header">Date:</span><span class="carpool-text">05/11/2020</span><br>
                 </p>
             </div>
             <div class="product-text"><b>Are you interested?</b>
@@ -105,13 +69,12 @@
 
         <div class="container-items">
             <div class="image-container">
-                <img src="images/tv.jpg" alt="TV">
-                <p class="minimize">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed dot eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.
-                    Reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint occaecat cupidatat non proident, sunt inre culpa qui
-                    officia deserunt mollit anim id est laborum.
+                <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d71207.08752404747!2d12.737421914542141!3d56.10138703250569!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x46523205d49b8b01%3A0xe60bbbd9d1159296!2sMariastaden%2C%20Helsingborg!3m2!1d56.084948499999996!2d12.694488!4m5!1s0x4653d3a4f28f0247%3A0x7e804e320b6ef225!2sFrode%20Laursen%20AB%2C%20Ji-te%20gatan%2C%20%C3%85storp!3m2!1d56.1248418!2d12.9205265!5e0!3m2!1sen!2sse!4v1604433912103!5m2!1sen!2sse" width="400" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <p class="minimize">
+                    <span class="carpool-header">To: </span><span class="carpool-text">Åstorp</span><br>
+                    <span class="carpool-header">From: </span><span class="carpool-text">Mariastaden</span><br>
+                    <span class="carpool-header">Time: </span><span class="carpool-text">07:00</span><br>
+                    <span class="carpool-header">Date: </span><span class="carpool-text">Weekdays</span><br>
                 </p>
             </div>
             <div class="product-text"><b>Are you interested?</b>
