--- a/carpool.html
+++ b/carpool.html
@@ -37,10 +37,10 @@
             <div class="image-container">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d17822.970945054585!2d12.692099767058092!3d56.055528360650555!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x4652323588beb127%3A0x6999d90413d68502!2sCentrum%2C%20Helsingborg!3m2!1d56.0458457!2d12.696375699999999!4m5!1s0x46523268f91a5a81%3A0xebf6b9714c9daf4c!2sMaxi%20ICA%20Stormarknad%20Helsingborg%2C%20Regementsv%C3%A4gen%207%2C%20254%2057%20Helsingborg!3m2!1d56.065387699999995!2d12.7196693!5e0!3m2!1sen!2sse!4v1604433709648!5m2!1sen!2sse" width="400" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 <p class="minimize">
-                    <span class="carpool-header">To:</span><span class="carpool-text">ICA Maxi Helsingborg</span><br>
-                    <span class="carpool-header">From:</span><span class="carpool-text">Helsingborg Centrum</span><br>
-                    <span class="carpool-header">Time:</span><span class="carpool-text">18:00</span><br>
-                    <span class="carpool-header">Date:</span><span class="carpool-text">05/11/2020</span><br>
+                    <span class="carpool-header">To: </span><span class="carpool-text">ICA Maxi Helsingborg</span><br>
+                    <span class="carpool-header">From: </span><span class="carpool-text">Helsingborg Centrum</span><br>
+                    <span class="carpool-header">Time: </span><span class="carpool-text">18:00</span><br>
+                    <span class="carpool-header">Date: </span><span class="carpool-text">05/11/2020</span><br>
                 </p>
             </div>
             <div class="product-text"><b>Are you interested?</b>
@@ -54,10 +54,10 @@
             <div class="image-container">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d142546.46664254466!2d12.68122310824766!3d56.06561683533444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x46523247515cf0cb%3A0xe2cca4749a57fd82!2sStattena%2C%20Helsingborg!3m2!1d56.0581138!2d12.7034191!4m5!1s0x4653d36f7d0791e7%3A0x5f95756cea43b217!2sHello%20Fresh%20Ab%2C%20Billesholmsv%C3%A4gen%2C%20Bjuv!3m2!1d56.0749146!2d12.941824599999999!5e0!3m2!1sen!2sse!4v1604433784163!5m2!1sen!2sse" width="400" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 <p class="minimize">
-                    <span class="carpool-header">To:</span><span class="carpool-text">ICA Maxi Helsingborg</span><br>
-                    <span class="carpool-header">From:</span><span class="carpool-text">Helsingborg Centrum</span><br>
-                    <span class="carpool-header">Time:</span><span class="carpool-text">18:00</span><br>
-                    <span class="carpool-header">Date:</span><span class="carpool-text">05/11/2020</span><br>
+                    <span class="carpool-header">To: </span><span class="carpool-text">Bjuv</span><br>
+                    <span class="carpool-header">From: </span><span class="carpool-text">Helsingborg Stattena</span><br>
+                    <span class="carpool-header">Time: </span><span class="carpool-text">08:00</span><br>
+                    <span class="carpool-header">Date: </span><span class="carpool-text">Weekdays</span><br>
                 </p>
             </div>
             <div class="product-text"><b>Are you interested?</b>
