--- a/bankid.html
+++ b/bankid.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 
-    <img src="/images/bankidlandskap.png" alt="Bankid-logo" id="bankid-img">
+    <img src="images/bankidlandskap.png" alt="Bankid-logo" id="bankid-img">
 
     <h3 class="bank-id">Ready to be used</h3>
     <p class="bank-id-p">Start a login or signature on a <br>webpage or in an app</p>
-    <img src="/images/qrcode.png" alt="Qr-code-icon" id="qr-code-img">
+    <img src="images/qrcode.png" alt="Qr-code-icon" id="qr-code-img">
     <h3 class="bank-id" id="qr-code">QR-code</h3>
 
 
