added footer to diff locations

--- a/security.html
+++ b/security.html
@@ -21,9 +21,24 @@
 </body>
 <footer id="footer">
     <div class="footer-container">
-        <div class="footer-button"><div class="button-icon"><i class="fas fa-user-friends"></i></div><p>Get Connected</p></div>
-        <div class="footer-button"><div class="button-icon"><i class="fas fa-leaf"></i></div><p>Sustainability</p></div>
-        <div class="footer-button"><div class="button-icon"><i class="fas fa-shield-alt"></i></div><p>Security</p></div>
+        <a class="footer-button" href="getconnected.html">
+            <div>
+                <div class="button-icon"><i class="fas fa-user-friends"></i></div>
+                <p>Get Connected</p>
+            </div>
+        </a>
+        <a class="footer-button" href="getconnected.html">
+            <div>
+                <div class="button-icon"><i class="fas fa-leaf"></i></div>
+                <p>Sustainability</p>
+            </div>
+        </a>
+        <a class="footer-button" href="emergency.html">
+            <div>
+                <div class="button-icon"><i class="fas fa-shield-alt"></i></div>
+                <p>Security</p>
+            </div>
+        </a>
     </div>
 </footer>
 </html>
