--- a/connect-to-your-neighbors.html
+++ b/connect-to-your-neighbors.html
@@ -62,6 +62,28 @@
                 </div>
             </div>
         </div>
+        <footer id="footer">
+            <div class="footer-container">
+                <a class="footer-button" href="getconnected.html">
+                    <div>
+                        <div class="button-icon"><i class="fas fa-user-friends"></i></div>
+                        <p>Get Connected</p>
+                    </div>
+                </a>
+                <a class="footer-button" href="getconnected.html">
+                    <div>
+                        <div class="button-icon"><i class="fas fa-leaf"></i></div>
+                        <p>Sustainability</p>
+                    </div>
+                </a>
+                <a class="footer-button" href="emergency.html">
+                    <div>
+                        <div class="button-icon"><i class="fas fa-shield-alt"></i></div>
+                        <p>Security</p>
+                    </div>
+                </a>
+            </div>
+        </footer>
         <script src="script.js" defer></script>
     </body>
 </html>
