--- a/news.html
+++ b/news.html
@@ -63,13 +63,27 @@
     </div>
     </div>
 
-   <footer id="footer">
+    <footer id="footer">
         <div class="footer-container">
-            <a class="footer-button" href="getconnected.html"><div><div class="button-icon"><i class="fas fa-user-friends"></i></div><p>Get Connected</p></div></a>
-            <a class="footer-button" href="sustainability.html"><div class="footer-button"><div class="button-icon"><i class="fas fa-leaf"></i></div><p>Sustainability</p></div></a>
-            <a class="footer-button" href="emergency.html"><div class="footer-button"><div class="button-icon"><i class="fas fa-shield-alt"></i></div><p>Security</p></div></a>
+            <a class="footer-button" href="getconnected.html">
+                <div>
+                    <div class="button-icon"><i class="fas fa-user-friends"></i></div>
+                    <p>Get Connected</p>
+                </div>
+            </a>
+            <a class="footer-button" href="getconnected.html">
+                <div>
+                    <div class="button-icon"><i class="fas fa-leaf"></i></div>
+                    <p>Sustainability</p>
+                </div>
+            </a>
+            <a class="footer-button" href="emergency.html">
+                <div>
+                    <div class="button-icon"><i class="fas fa-shield-alt"></i></div>
+                    <p>Security</p>
+                </div>
+            </a>
         </div>
     </footer>
-
 </body>
 </html>
