Smart consumption changed to lend

--- a/smart-consumption.html
+++ b/smart-consumption.html
@@ -50,11 +50,12 @@ $('a.less', minimized_elements).click(function(event){
 		<div class="container-items">
             <div class="image-container">
             <img src="images/sherlock.jpg" alt="Book">
-            <p class="minimize">I am willing to share my favourite book of Sherlock Holmes with you for a month.
-                If anyone wants to borrow, feel free to press the Borrow button.
+            <p class="minimize">Hi, This is Rama! I had been looking for a Sherlock Novel for my kid since the last few days in our library.
+                Looks like its not available for the time being.
+                If anyone is willing to lend it to me for a few weeks, please feel free to press the 'Yes' button. Thanks in advance!
                </p>
             </div>
-            <div class="product-text"><b>Are you interested to borrow?</b>
+            <div class="product-text"><b>Are you willing to lend?</b>
                 <span><div class="interest-button">Yes</div></span>
             </div>
         </div>
@@ -62,11 +63,10 @@ $('a.less', minimized_elements).click(function(event){
         <div class="container-items">
             <div class="image-container">
             <img src="images/tools.jpg" alt="Tools">
-            <p class="minimize">I am willing to share my set of toolbox with you for a month.
-                If anyone wants to borrow, feel free to press the Borrow button.
-               </p>
+            <p class="minimize">Hi, This is Sayantoni! I was looking for a toolbox for a couple of days.
+                If anyone is willing to lend it to me, please feel free to press the 'Yes' button. It would be a great help to me.               </p>
             </div>
-            <div class="product-text"><b>Are you interested to borrow?</b>
+            <div class="product-text"><b>Are you willing to lend?</b>
                 <span><div class="interest-button">Yes</div></span>
             </div>
         </div>
@@ -74,11 +74,11 @@ $('a.less', minimized_elements).click(function(event){
         <div class="container-items">
             <div class="image-container">
             <img src="images/lawn_mower.jpg" alt="Lawn mower">
-            <p class="minimize">I am willing to share my little lawn mower robot with you for a couple of weeks.
-                If anyone wants to borrow, feel free to press the Borrow button.
+            <p class="minimize">Hi, This is Jimmy! I would be needing a lawn mower for a couple of days.
+                If anyone is willing to lend it to me, please feel free to press the 'Yes' button. It would be a great help to me.
                </p>
             </div>
-            <div class="product-text"><b>Are you interested to borrow?</b>
+            <div class="product-text"><b>Are you willing to lend?</b>
                 <span><div class="interest-button">Yes</div></span>
             </div>
         </div>
