--- a/pm.html
+++ b/pm.html
@@ -3,9 +3,28 @@
 <head>
 	<title>My Website</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src="https://kit.fontawesome.com/14a6d0f73b.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/14a6d0f73b.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lobster">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="sidebar.js" defer></script>
 </head>
 <body>
+    <div id="mySidebar" class="sidebar closed">
+        <a href="javascript:void(0)" class="closebtn" onclick="navEvent()">&#9776;</a>
+        <a href="javascript:void(0)" class="accordion">Region</a>
+        <div class="panel">
+            <a href="javascript:void(0)">Staircase</a>
+            <a href="javascript:void(0)">Building</a>
+            <a href="javascript:void(0)">Area</a>
+        </div>
+        <a href="pm.html">Direct Messages</a>
+        <a href="support.html">Support</a>
+        <a href="logout.html">Logout</a>
+    </div>
+
+    <div id="navbar">
+            <button class="openbtn" onclick="navEvent()">&#9776;</button> 
+    </div>
 	<div class="wrapper">
         <img src="images/smartneigh.png" class="image-logo">
         <div class="inner-wrap">
@@ -61,28 +80,14 @@
 
 
 
-            <footer id="footer">
-                <div class="footer-container">
-                    <a class="footer-button" href="getconnected.html">
-                        <div>
-                            <div class="button-icon"><i class="fas fa-user-friends"></i></div>
-                            <p>Get Connected</p>
-                        </div>
-                    </a>
-                    <a class="footer-button" href="getconnected.html">
-                        <div>
-                            <div class="button-icon"><i class="fas fa-leaf"></i></div>
-                            <p>Sustainability</p>
-                        </div>
-                    </a>
-                    <a class="footer-button" href="emergency.html">
-                        <div>
-                            <div class="button-icon"><i class="fas fa-shield-alt"></i></div>
-                            <p>Security</p>
-                        </div>
-                    </a>
-                </div>
-            </footer>
+        <footer id="footer">
+            <div class="footer-container">
+                <div class="footer-button"><div class="button-icon"><i class="fas fa-user-friends"></i></div><p>Get Connected</p></div>
+                <div class="footer-button"><div class="button-icon"><i class="fas fa-leaf"></i></div><p>Sustainability</p></div>
+                <div class="footer-button"><div class="button-icon"><i class="fas fa-shield-alt"></i></div><p>Security</p></div>
+            </div>
+        </footer>
+
 	</div>
 </body>
 </html>
