--- a/news.html
+++ b/news.html
@@ -9,7 +9,7 @@
     <script src="sidebar.js" defer></script>
     <script src="text-read.js"></script>
 
-    <title>Footer</title>
+    <title>Get Connected</title>
     <!--<style>
         body{
             background-color: white;
