sign-out style adjust

--- a/sign-out.html
+++ b/sign-out.html
@@ -31,7 +31,7 @@
    <div class="loader-container">
        <div>
     <img class="image-logo" src="images/smartneigh.png">
-    <p>Thanks for visisting our webpage</p>
+    <p>Thanks for visiting our webpage</p>
      </div>
     <div class="loader"></div>
 
