Added help eachother

--- a/help-eachother.html
+++ b/help-eachother.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Connect to your neighbours</title>
+        <title>Help Eachother</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lobster">
@@ -26,18 +26,17 @@
             <div id="navbar">
                 <div class="logo-header">
                     <button class="openbtn" onclick="navEvent()">&#9776;</button>
-                    <h1>Connect to your neighbours</h1>
-                    <p class="information-header">Connect with your neighbours for a coffee or a walk</p>
+                    <h1>Help eachother</h1>
+                    <p class="information-header">Ask your neighbor for help</p>
                 </div>  
             </div>
 
             <div class="container-items">
                 <div class="image-container">
-                    <h3>Meet for Coffee</h3>
-                    <img src="images/fika.jpg" width="80px" height="80px" alt="Join for coffee">
-                    <p>Hi, anyone interested to meet for a chat and have coffee together this evening?</p>
-                    <p>Join me at my home: <span>33 Cark Krooks Gata</span>
-                    <span>at 5.00 pm, Wednesday 04-11-20 </span></p>
+                    <h3>Need Help</h3>
+                    <p>Hi, I need help to carry furniture from the parking lot to my apartment. Can someone help me?</p>
+                    <p>Apartment no - <span>33 Cark Krooks Gata, apt L2</span>
+                    <p><span>at 5.00 pm, Wednesday 04-11-20 </span></p>
                 </div>
                 <div class="product-text"><b>Interested?</b>
                     <span>
@@ -48,11 +47,9 @@
             </div>
             <div class="container-items">
                 <div class="image-container">
-                    <h3>Join for a walk</h3>
-                    <img src="images/walk.jpg" width="80px" height="80px" alt="Join for coffee">
-                    <p>Hi, anyone interested in going for a walk?</p>
-                    <p>We will start near ICA
-                    <span>at 4.00 pm, Wednesday 04-11-20 </span></p>
+                    <h3>Anyone going to supermarket</h3>
+                    <p>Can someone get me milk if you are going to supermarket before 4pm today?</p>
+                    <p>Apartment no - <span>33 Cark Krooks Gata, apt L2</span></p>
                 </div>
                 <div class="product-text"><b>Interested?</b>
                     <span>
@@ -62,6 +59,7 @@
                 </div>
             </div>
             <div class="container-items">
+
                 <div id="plus">
                     <button class="plus-container" onclick="addInputContainer()"><i class="fa fa-2x fa-plus"></i></button>
                 </div>
@@ -76,7 +74,7 @@
                         <label for="visibility">Locality</label><br>
                     </div>
                     <div class="product-text">
-                        <label for="event">Event</label><br>
+                        <label for="event">What do I need?</label><br>
                         <input type="text" id="head" name="head"><br>
 
                         <label for="desc">Description</label><br>
