--- a/connect.html
+++ b/connect.html
@@ -30,9 +30,9 @@
     </div>
     <div class="connect-wrapper">
 	<div class="connect-container">
-        <div class="events"><div class="button-icon"><i class="far fa-calendar-alt"></i></div><p class="parstyle">Events</p></div>
-        <div class="localsnews"><div class="button-icon"><i class="fas fa-newspaper"></i></div><p class="parstyle">Local news</p></div>
-        <div class="helpeachothers"><div class="button-icon"><i class="fas fa-hands-helping"></i></div><p class="parstyle">Help each other</p></div>
+        <div class="events"><div class="button-icon"><i class="far fa-calendar-alt"></i></div><p class="parstyle">Events</p></div></a>
+        <a href="news.html"><div class="localsnews"><div class="button-icon"><i class="fas fa-newspaper"></i></div><p class="parstyle">Local news</p></div>
+        <a href=""><div class="helpeachothers"><div class="button-icon"><i class="fas fa-hands-helping"></i></div><p class="parstyle">Help each other</p></div></a>
     </div>
 </div>
     <script src="https://kit.fontawesome.com/14a6d0f73b.js" crossorigin="anonymous"></script>
