--- a/startscreen.html
+++ b/startscreen.html
@@ -23,10 +23,10 @@
     </div>
 
     <div id="navbar">
-            <button class="openbtn" onclick="navEvent()">&#9776;</button> 
+            <button class="openbtn startscreen-nav-btn" onclick="navEvent()">&#9776;</button> 
+            <img class="image-logo" src="images/smartneigh.png">
     </div>
 	<div class="wrapper">
-		<img class="image-logo" src="images/smartneigh.png">
 		<div class="buttons">
 			<a href="connect.html"><button class="connect">Get connected</button></a>
 			<a href="sustainability.html"><button class="sustainability">Sustainability</button></a>
