--- a/connect.html
+++ b/connect.html
@@ -30,28 +30,28 @@
     </div>
     <div class="connect-wrapper">
 	<div class="connect-container">
-        <div class="events"><div class="button-icon"><i class="far fa-calendar-alt"></i></div><p class="parstyle">Events</p></div>
-        <div class="localsnews"><div class="button-icon"><i class="fas fa-newspaper"></i></div><p class="parstyle">Local news</p></div>
-        <div class="helpeachothers"><div class="button-icon"><i class="fas fa-hands-helping"></i></div><p class="parstyle">Help each other</p></div>
+        <a class="no-underline" href="connect-to-your-neighbors.html"><div class="events"><div class="button-icon"><i class="far fa-calendar-alt"></i></div><p class="parstyle">Events</p></div></a>
+        <a class="no-underline" href="news.html"><div class="localsnews"><div class="button-icon"><i class="fas fa-newspaper"></i></div><p class="parstyle">Local news</p></div></a>
+        <a class="no-underline" href="carpool.html"><div class="helpeachothers"><div class="button-icon"><i class="fas fa-hands-helping"></i></div><p class="parstyle">Help each other</p></div></a>
     </div>
 </div>
     <script src="https://kit.fontawesome.com/14a6d0f73b.js" crossorigin="anonymous"></script>
 </body>
 <footer id="footer">
     <div class="footer-container">
-        <a class="footer-button" href="getconnected.html">
+        <a class="footer-button" href="connect.html">
             <div>
                 <div class="button-icon"><i class="fas fa-user-friends"></i></div>
                 <p>Get Connected</p>
             </div>
         </a>
-        <a class="footer-button" href="getconnected.html">
+        <a class="footer-button" href="sustainability.html">
             <div>
                 <div class="button-icon"><i class="fas fa-leaf"></i></div>
                 <p>Sustainability</p>
             </div>
         </a>
-        <a class="footer-button" href="emergency.html">
+        <a class="footer-button" href="security.html">
             <div>
                 <div class="button-icon"><i class="fas fa-shield-alt"></i></div>
                 <p>Security</p>
