--- a/sustainability.html
+++ b/sustainability.html
@@ -30,28 +30,28 @@
     </div>
     <div class="sustainabilty-wrapper">
 	<div class="sustainabilty-container">
-        <div class="carpool"><div class="button-icon"><i class="fas fa-car"></i></div><p class="parstyle">Carpool</p></div>
-        <div class="reuse"><div class="button-icon"><i class="fas fa-recycle"></i></i></div><p class="parstyle">Reuse</p></div>
-        <div class="smart-consumption"><div class="button-icon"><i class="fas fa-brain"></i></div><p class="parstyle">Smart consumption</p></div>
+        <a class="no-underline" href="carpool.html"><div class="carpool"><div class="button-icon"><i class="fas fa-car"></i></div><p class="parstyle">Carpool</p></div></a>
+        <a class="no-underline" href="Reuse.html"><div class="reuse"><div class="button-icon"><i class="fas fa-recycle"></i></i></div><p class="parstyle">Reuse</p></div></a>
+        <a class="no-underline" href="smart-consumption.html"><div class="smart-consumption"><div class="button-icon"><i class="fas fa-brain"></i></div><p class="parstyle">Smart consumption</p></div></a>
     </div>
 </div>
     <script src="https://kit.fontawesome.com/14a6d0f73b.js" crossorigin="anonymous"></script>
 </body>
 <footer id="footer">
     <div class="footer-container">
-        <a class="footer-button" href="getconnected.html">
+        <a class="footer-button" href="connect.html">
             <div>
                 <div class="button-icon"><i class="fas fa-user-friends"></i></div>
                 <p>Get Connected</p>
             </div>
         </a>
-        <a class="footer-button" href="getconnected.html">
+        <a class="footer-button" href="sustainability.html">
             <div>
                 <div class="button-icon"><i class="fas fa-leaf"></i></div>
                 <p>Sustainability</p>
             </div>
         </a>
-        <a class="footer-button" href="emergency.html">
+        <a class="footer-button" href="security.html">
             <div>
                 <div class="button-icon"><i class="fas fa-shield-alt"></i></div>
                 <p>Security</p>
