Fixed news stylesheet

--- a/news.html
+++ b/news.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="sidebar.js" defer></script>
     <script src="text-read.js"></script>
-    <title>Footer</title>
+    <title>Get Connected</title>
 </head>
 <body>
     <div id="mySidebar" class="sidebar closed">
