Addes Ahref to all links

--- a/connect.html
+++ b/connect.html
@@ -32,7 +32,7 @@
 	<div class="connect-container">
         <a class="no-underline" href="connect-to-your-neighbors.html"><div class="events"><div class="button-icon"><i class="far fa-calendar-alt"></i></div><p class="parstyle">Events</p></div></a>
         <a class="no-underline" href="news.html"><div class="localsnews"><div class="button-icon"><i class="fas fa-newspaper"></i></div><p class="parstyle">Local news</p></div></a>
-        <a class="no-underline" href="carpool.html"><div class="helpeachothers"><div class="button-icon"><i class="fas fa-hands-helping"></i></div><p class="parstyle">Help each other</p></div></a>
+        <a class="no-underline" href="help-eachother.html"><div class="helpeachothers"><div class="button-icon"><i class="fas fa-hands-helping"></i></div><p class="parstyle">Help each other</p></div></a>
     </div>
 </div>
     <script src="https://kit.fontawesome.com/14a6d0f73b.js" crossorigin="anonymous"></script>
