--- a/security.html
+++ b/security.html
@@ -31,28 +31,28 @@
     <div class="security-wrapper">
         
 	<div class="security-container">
-        <div class="neigbourhoodwatch"><div class="button-icon"><i class="fas fa-user-secret"></i></div><p class="parstyle">Neigbourhood watch</p></div>
-        <div class="incidents"><div class="button-icon"><i class="fas fa-bullhorn"></i></div><p class="parstyle">Incidents</p></div>
-        <div class="weather-alerts"><div class="button-icon"><i class="fas fa-cloud"></i></div><p class="parstyle">Weather alerts</p></div>
+        <a class="no-underline" href="#"><div class="neigbourhoodwatch"><div class="button-icon"><i class="fas fa-user-secret"></i></div><p class="parstyle">Neigbourhood watch</p></div></a>
+        <a class="no-underline" href="incidents.html"><div class="incidents"><div class="button-icon"><i class="fas fa-bullhorn"></i></div><p class="parstyle">Incidents</p></div></a>
+        <a class="no-underline" href="weather.html"><div class="weather-alerts"><div class="button-icon"><i class="fas fa-cloud"></i></div><p class="parstyle">Weather alerts</p></div></a>
     </div>
 </div>
     <script src="https://kit.fontawesome.com/14a6d0f73b.js" crossorigin="anonymous"></script>
 </body>
 <footer id="footer">
     <div class="footer-container">
-        <a class="footer-button" href="getconnected.html">
+        <a class="footer-button" href="connect.html">
             <div>
                 <div class="button-icon"><i class="fas fa-user-friends"></i></div>
                 <p>Get Connected</p>
             </div>
         </a>
-        <a class="footer-button" href="getconnected.html">
+        <a class="footer-button" href="sustainability.html">
             <div>
                 <div class="button-icon"><i class="fas fa-leaf"></i></div>
                 <p>Sustainability</p>
             </div>
         </a>
-        <a class="footer-button" href="emergency.html">
+        <a class="footer-button" href="security.html">
             <div>
                 <div class="button-icon"><i class="fas fa-shield-alt"></i></div>
                 <p>Security</p>
