--- a/incidents.html
+++ b/incidents.html
@@ -100,19 +100,19 @@
     </div>
     <footer id="footer">
         <div class="footer-container">
-            <a class="footer-button" href="getconnected.html">
+            <a class="footer-button" href="connect.html">
                 <div>
                     <div class="button-icon"><i class="fas fa-user-friends"></i></div>
                     <p>Get Connected</p>
                 </div>
             </a>
-            <a class="footer-button" href="getconnected.html">
+            <a class="footer-button" href="sustainability.html">
                 <div>
                     <div class="button-icon"><i class="fas fa-leaf"></i></div>
                     <p>Sustainability</p>
                 </div>
             </a>
-            <a class="footer-button" href="emergency.html">
+            <a class="footer-button" href="security.html">
                 <div>
                     <div class="button-icon"><i class="fas fa-shield-alt"></i></div>
                     <p>Security</p>
