--- a/footer.html
+++ b/footer.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/14a6d0f73b.js" crossorigin="anonymous"></script>
     <title>Footer</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap" rel="stylesheet">
 </head>
 <body>
     <footer id="footer">
