--- a/Reuse.html
+++ b/Reuse.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/14a6d0f73b.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap" rel="stylesheet">
+    <script src="sidebar.js"></script>
     <script>
     jQuery(function(){
         console.log("Inside the main function");
