--- a/pm.html
+++ b/pm.html
@@ -23,10 +23,10 @@
     </div>
 
     <div id="navbar">
-            <button class="openbtn" onclick="navEvent()">&#9776;</button> 
+            <button class="openbtn startscreen-nav-btn" onclick="navEvent()">&#9776;</button> 
+            <img class="image-logo" src="images/smartneigh.png">
     </div>
 	<div class="wrapper">
-        <img src="images/smartneigh.png" class="image-logo">
         <div class="inner-wrap">
             <div class="chat-nav">
                 <p class="pers-chat">Jimmy T</p>
