--- a/bankid.html
+++ b/bankid.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="bankid-body">
 
     <img src="images/bankidlandskap.png" alt="Bankid-logo" id="bankid-img">
 
