--- a/pm.html
+++ b/pm.html
@@ -81,13 +81,28 @@
 
 
 
-        <footer id="footer">
-            <div class="footer-container">
-                <div class="footer-button"><div class="button-icon"><i class="fas fa-user-friends"></i></div><p>Get Connected</p></div>
-                <div class="footer-button"><div class="button-icon"><i class="fas fa-leaf"></i></div><p>Sustainability</p></div>
-                <div class="footer-button"><div class="button-icon"><i class="fas fa-shield-alt"></i></div><p>Security</p></div>
-            </div>
-        </footer>
+            <footer id="footer">
+                <div class="footer-container">
+                    <a class="footer-button" href="connect.html">
+                        <div>
+                            <div class="button-icon"><i class="fas fa-user-friends"></i></div>
+                            <p>Get Connected</p>
+                        </div>
+                    </a>
+                    <a class="footer-button" href="sustainability.html">
+                        <div>
+                            <div class="button-icon"><i class="fas fa-leaf"></i></div>
+                            <p>Sustainability</p>
+                        </div>
+                    </a>
+                    <a class="footer-button" href="security.html">
+                        <div>
+                            <div class="button-icon"><i class="fas fa-shield-alt"></i></div>
+                            <p>Security</p>
+                        </div>
+                    </a>
+                </div>
+            </footer>
 
 	</div>
 </body>
