--- a/security.html
+++ b/security.html
@@ -32,7 +32,7 @@
     <div class="security-wrapper">
         
 	<div class="security-container">
-        <a class="no-underline" href="#"><div class="neigbourhoodwatch"><div class="button-icon"><i class="fas fa-user-secret"></i></div><p class="parstyle">Neigbourhood watch</p></div></a>
+        <a class="no-underline" href="neighbwatch.html"><div class="neigbourhoodwatch"><div class="button-icon"><i class="fas fa-user-secret"></i></div><p class="parstyle">Neigbourhood watch</p></div></a>
         <a class="no-underline" href="incidents.html"><div class="incidents"><div class="button-icon"><i class="fas fa-bullhorn"></i></div><p class="parstyle">Incidents</p></div></a>
         <a class="no-underline" href="weather.html"><div class="weather-alerts"><div class="button-icon"><i class="fas fa-cloud"></i></div><p class="parstyle">Weather alerts</p></div></a>
     </div>
