fixed index.html to direct to bank id page

--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
-<!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <title>Landing Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BankID</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="loading.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap" rel="stylesheet">
 </head>
-<body>
-    
-    <div class="index-page-container">
-        <img class="startpage-img hidden" src="images/smartneigh.png">
-    </div>
-</body>
+<body id="bankid-body">
 
+    <img src="images/bankidlandskap.png" alt="Bankid-logo" id="bankid-img">
+
+    <h3 class="bank-id">Ready to be used</h3>
+    <p class="bank-id-p">Start a login or signature on a <br>webpage or in an app<br><br>Click the QR code to Login</p>
+    <a href="loading.html"><img src="images/qrcode.png" alt="Qr-code-icon" id="qr-code-img"></a>
+    <h3 class="bank-id" id="qr-code">QR-code</h3>
+
+    <button class="login-btn">Login</button>
+
+</body>
 </html>
