--- a/news.html
+++ b/news.html
@@ -32,8 +32,8 @@
     <div class= "news-container">
        
     <div class="logo-header">
-        <h1>Get Connected</h1>
-        <p class="information-header info-style">In Get Connected we keep you updated with the latest news</p>
+        <h1>Local News</h1>
+        <p class="information-header info-style">In Local News we keep you updated with the latest news</p>
     </div>
 
        
