fixed index.html to direct to bank id page

--- a/support.html
+++ b/support.html
@@ -44,5 +44,27 @@
     </div>
 
 </body>
+<footer id="footer">
+    <div class="footer-container">
+        <a class="footer-button" href="connect.html">
+            <div>
+                <div class="button-icon"><i class="fas fa-user-friends"></i></div>
+                <p>Get Connected</p>
+            </div>
+        </a>
+        <a class="footer-button" href="sustainability.html">
+            <div>
+                <div class="button-icon"><i class="fas fa-leaf"></i></div>
+                <p>Sustainability</p>
+            </div>
+        </a>
+        <a class="footer-button" href="security.html">
+            <div>
+                <div class="button-icon"><i class="fas fa-shield-alt"></i></div>
+                <p>Security</p>
+            </div>
+        </a>
+    </div>
+</footer>
 
 </html>
