--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="images/bankidlandskap.png" alt="Bankid-logo" id="bankid-img">
 
     <h3 class="bank-id">Ready to be used</h3>
-    <p class="bank-id-p">Start a login or signature on a <br>webpage or in an app<br><br>Click the QR code to Login</p>
+    <p class="bank-id-p">Start a login or signature on a <br>webpage or in an app<br><br><strong>**Click the QR code to Login**</strong></p>
     <a href="loading.html"><img src="images/qrcode.png" alt="Qr-code-icon" id="qr-code-img"></a>
     <h3 class="bank-id" id="qr-code">QR-code</h3>
 
